# tkww-de-pipeline-api

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  tkww_movies_catalog.db
data/: 1.csv  2.csv  3.csv  4.csv
scripts/: api.py  etl.py
scripts/helpers/: helpers.py
tests/helpers/: test_columns_to_lower.py  test_deduplicate.py  test_normalize_year.py
tests/unit/helpers/: test_apply_column_transformations.py  test_cast_col_types.py  test_normalize_gross_value.py  test_parse_directors_and_stars.py
tests/unit/spark_operations/sample/: test__sample.py
tests/unit/utils/: assertions.py
